name:                hib
version:             0.1.0.0
synopsis:            Simple IRC bot
description:         Please see README.md
homepage:            http://github.com/githubuser/hib#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
maintainer:          matias@keveri.fi
copyright:           2015 Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hib
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Hib.IRC,
    Hib.Types,
    Hib.Network,
    Hib.Command,
    Hib.Core,
    Hib.Config
  default-language:    Haskell2010
  build-depends:
    base         >= 4.7 && < 5,
    network      >= 2.6,
    mtl          >= 2.2,
    containers   >= 0.5,
    configurator >= 0.3
